--- a/examples/index.html
+++ b/examples/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="./webrtc-mesh.js"></script>
+    <script src="../dist/webrtc-mesh.js"></script>
     <script>
       const mesh = new WebRTCMesh.Mesh({
         signalsUrl: 'http://house.chat:8080/signal',
         appName: 'myweb',
       })
 
-      mesh.on('peer', (peer) => {
-        console.log('got peer')
+      const peers = {}
+      const utf8decoder = new TextDecoder()
+
+      mesh.on('peer', (peer, id) => {
+        console.log('<<<< got peer', id, peer)
+
+        const timer = setInterval(() => {
+          peer.send(`beep ${Math.random() * 10000}`)
+        }, Math.random() * 4000 + 2000)
+
+        peers[id] = {
+          peer,
+          timer,
+        }
+
+        peer.on('data', (data) => {
+          console.log('data from', id, utf8decoder.decode(data))
+        })
       })
+
+      mesh.on('disconnect', (peer, id) => {
+        console.log('>>>> lost peer', id, peer)
+
+        if (peers[id]) clearInterval(peers[id].timer)
+      })
+
+      console.log('i am', mesh.me)
     </script>
   </head>
 </html>
