use faye demo server

--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
     <script src="../dist/webrtc-mesh.js"></script>
     <script>
       const mesh = new WebRTCMesh.Mesh({
-        signalsUrl: 'http://house.chat:8080/signal',
+        signalsUrl: 'http://localhost:8080/signal',
         appName: 'myweb',
       })
 
